--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^5.7.0",
     "@types/react-swipeable-views": "^0.13.1",
     "framer-motion": "^7.6.2",
-    "next": "^12.1.6",
+    "next": "12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-swipeable-views": "^0.14.0"
